# chisel

./: .chiselignore  .env.example  .eslintrc.json  .gitignore  .kandcignore.example  CLAUDE.md  README.md  main.py  mcp_server.py  package-lock.json  package.json  pyproject.dev.toml  pyproject.toml  requirements.txt  setup.py  test_enhanced_profile.py  test_kernel.cu  test_kernel.hip  tsconfig.base.json  turbo.json
.cursor/rules/: senior-engineer-task-execution.mdc
chisel/: __init__.py  __main__.py  cli.py  commands.py  droplet.py  gpu_profiles.py  main.py  perfetto_viewer.py  pod.py  pod_manager.py  profile_manager.py  profile_state.py  ssh_manager.py  state.py
chisel-backend/: main.py  requirements.txt
chisel-mcp/: README.md  pyproject.toml  test_kernel.cpp  test_kernel.cu
chisel-mcp/src/chisel_mcp/: __init__.py  server.py
chisel-python/: CLAUDE.md  README.md  main.py
chisel-typescript/: package-lock.json  package.json
chisel.egg-info/: PKG-INFO  SOURCES.txt
chisel_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chiselv1/: main.py  pyproject.toml
chiselv2/: simple_test.py
cli/: cli.py  commands.py  main.py
docs/: README.md  api-reference.md  configuration.md  contact.md  development.md  examples.md  getting-started.md  model_profiling.md  troubleshooting.md
examples/: .chiselignore  .kandcignore  DEMO.md  README.md  UPLOAD_LIMITS_TEST.md  analyze_trace_example.py  args_example.py  attention_block.py  basic_usage.py  complete_example.py  create_test_files.py  custom-requirements.txt  kernel.cu  kernel.out  large_file_caching_example.py  main.py  matrix_multiply.json  model_profiling_example.py  offline_example.py  profiler_example.py  requirements.txt  requirements_example.py  simple-mm  simple-mm.hip  simple_example.py  simple_gpu_test.py  simple_upload_test.py  specific_call.py  sweep_inference.py  test_all_examples.py  test_browser_opening.py  test_cached_file_fix.py  test_model_profiling.py  test_upload_limits.py  timed_block.py  timing_test.py  to-convert.py  to_convert.py  vllm_example.py
mcp/: mcp_server.py  profiling_with_mcp.md
scripts/: build_env.ts  setup-ci.sh  toggle-dev-mode.sh
tests/: __init__.py  conftest.py  test_cli.py  test_do_client.py  test_droplet.py  test_state.py
(+219 files in other folders)
